골드 취득 API 구조변경 rest api 설계 참고하여 복수명칭으로 변경 & 문서 업데이트 배틀 신청 API 구조 변경 "/add"제거하고 post형식으로 추가 API명시 배틀 신청 API변경사항 문서 업데이트 배틀 신청 API변경사항 관리자페이지 / 메인웹 호출형식 변경 신청한배틀 취득 / 배틀 신청 API 명명 규칙 변경하여 명칭 통일 카멜케이스 -> 하이픈 subBattles-> sub-battles 배틀 환급에 대한 처리 트리거로 자동화 배틀 환급에 대한 웹 화면 제거 및 API 제거 & 문서에서 제거 배틀 즉시시작에 대한 처리 트리거로 자동화 유저 2명 신청오면 바로 배틀 시작 // 기존에 있던 API 제거 및 웹화면단 소스 제거 배틀 신청 로직 통합에 따른 신청한 배틀 변경에 대한 API 제거 & 웹화면 기존 소스 제거
